change back to paragraph

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -29,7 +29,7 @@
 	    commentError.innerText = 'No Mastodon comments yet';
             commentsList.appendChild();
         }
-	let pleaseReply = document.createElement('b');
+	let pleaseReply = document.createElement('p');
 	pleaseReply.innerHTML = '<br>You can reply on any Fediverse (Mastodon, Pleroma, etc.) client by pasting this URL into the search field of your client:<br>';
 	let replyLinkPre = document.createElement('pre');
 	let replyLink = document.createElement('a');
