more css tweaks

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="../assets/css/comments.css">
 <div class="article-content">
 <br>
-<div id="comments-list"></div>
+<div id="comments-list" style="border-top: 1px solid #BBB;"></div>
 <noscript><p>You need JavaScript to view comments here.</p></noscript>
 <p><a id="load-comment" class="comment-button">Show Comments</a></p>
 <p><br>You can reply on any Fediverse (Mastodon, Pleroma, etc.) website or app by pasting this URL into the search field of your client:<br>
