actually show the error when no comments are there yet

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -27,7 +27,7 @@
         else {
 	    let commentError = document.createElement('p');
 	    commentError.innerText = 'No Mastodon comments yet';
-            commentsList.appendChild();
+            commentsList.appendChild(commentError);
         }
     });
 
