--- a/assets/css/comments.css
+++ b/assets/css/comments.css
@@ -70,14 +70,14 @@ div.comment-content .comment-date{
     }
 }
 
-.comment-button, .comment-button:hover {
-	border: 1.5px solid #d7d7d7;
-	border-radius: 7px;
+.comment-button, .comment-button:hover, .comment-button:visited {
+	border: 1.5px solid #e7e7e7;
+	border-radius: 5px;
 	padding: 10px;
 	display: inline-block;
 	margin: 10px 0;
 
-	background: linear-gradient(120deg, #f3f3f3, #d7d7d7);
-	color: black !important;
-	font-size: 20px;
+	background: linear-gradient(120deg, #f3f3f3, #e7e7e7);
+	color: #555 !important;
+	font-weight: bold;
 }
