--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -5,7 +5,7 @@
 <br>
 <div id="comments-list" style="border-top: 1px solid #BBB;"></div>
 <noscript><p>You need JavaScript to view comments here.</p></noscript>
-<p><a id="load-comment" class="comment-button">Show Comments</a></p>
+<p><button id="load-comment" class="comment-button">Show Comments</button></p>
 <p><br>You can reply on any Fediverse (Mastodon, Pleroma, etc.) website or app by pasting this URL into the search field of your client:<br>
 <pre><a href='https://{{ mastodon_instance }}/@{{ mastodon_user }}/{{ page.com_id }}' target='_blank'>https://{{ mastodon_instance }}/@{{ mastodon_user }}/{{ page.com_id }}</a></pre>
 <script src="../assets/js/purify.js"></script>
