--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -12,6 +12,10 @@ dd,dt,li,dl,ul,ol {list-style:none} legend {color:#000} button,select,textarea,i
 body {
     padding-top: 0px;
 }
+
+button {
+    cursor: pointer;
+}
 	
 #menu {
     text-align: center;
