serif font on buttons doesn't make sense

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,7 +2,7 @@
 *******************************************************************************/
 
 * {margin:0;padding:0} iframe,a img,fieldset,form,table {border:0} h6,h5,h4,h3,h2,h1,caption,th,td {font-size:100%;font-weight:normal}
-dd,dt,li,dl,ul,ol {list-style:none} legend {color:#000} button,select,textarea,input {font:100% serif} table {border-collapse:collapse} caption,th,td{text-align:left}
+dd,dt,li,dl,ul,ol {list-style:none} legend {color:#000} select,textarea,input {font:100% serif} table {border-collapse:collapse} caption,th,td{text-align:left}
 
 
 
