--- a/assets/css/comments.css
+++ b/assets/css/comments.css
@@ -71,6 +71,7 @@ div.comment-content .comment-date{
 }
 
 .comment-button, .comment-button:hover, .comment-button:visited {
+    	cursor: pointer;
 	border: 1.5px solid #e7e7e7;
 	border-radius: 5px;
 	padding: 10px;
