add Brazilian Portuguese to scripts

--- a/_includes/footer-languages.html
+++ b/_includes/footer-languages.html
@@ -10,6 +10,7 @@
 <a href="../nl/">NL</a>  |
 <a href="../pl/">PL</a>  |
 <a href="../pt/">PT</a>  |
+<a href="../pt_BR/">pt_BR</a>  |
 <a href="../ru/">RU</a>  |
 <a href="../sk/">SK</a>  |
 <a href="../sq/">SQ</a>  |
