add ubuntu-touch to get.delta.chat

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -97,6 +97,18 @@
                 Nix manual install: <code>nix-env -f "&lt;nixpkgs&gt;" -iA deltachat-desktop</code>
             </div>
         </div>
+        <div class="box" id="ubuntutouch">
+            <div class="title">Ubuntu Touch</div>
+            <div class="buttons">
+                <a class="img-badge" href="https://open-store.io/app/deltatouch.lotharketterer">
+                    <img src="../assets/badges/ubuntutouch-openstore.png" alt="Ubuntu Touch" />
+                </a>
+            </div>
+            <div class="descr">
+                <a href="https://codeberg.org/lk108/deltatouch">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a><br />
+                See <a href="https://delta.chat/en/2023-07-02-deltatouch">blog</a> for details about this community driven effort
+            </div>
+        </div>
     </div>
 </div>
 <script src="../assets/js/download-page2.js"></script>
