use native language names instead of, partly weird and unknown, ISO codes

--- a/_includes/footer-languages.html
+++ b/_includes/footer-languages.html
@@ -1,19 +1,19 @@
-<a href="../ca/">CA</a>  |
-<a href="../cs/">CS</a>  |
-<a href="../de/">DE</a>  |
-<a href="../en/">EN</a>  |
-<a href="../es/">ES</a>  |
-<a href="../fr/">FR</a>  |
-<a href="../gl/">GL</a>  |
-<a href="../id/">ID</a>  |
-<a href="../it/">IT</a>  |
-<a href="../nl/">NL</a>  |
-<a href="../pl/">PL</a>  |
-<a href="../pt/">PT</a>  |
-<a href="../pt_BR/">pt_BR</a>  |
-<a href="../ru/">RU</a>  |
-<a href="../sk/">SK</a>  |
-<a href="../sq/">SQ</a>  |
-<a href="../tr/">TR</a>  |
-<a href="../uk/">UK</a>  |
-<a href="../zh_CN/">zh_CN</a>
+<a href="../id/">Bahasa Indonesia</a>  |
+<a href="../ca/">Català</a>  |
+<a href="../cs/">Čeština</a>  |
+<a href="../de/">Deutsch</a>  |
+<a href="../en/">English</a>  |
+<a href="../es/">Español</a>  |
+<a href="../fr/">Français</a>  |
+<a href="../gl/">Galego</a>  |
+<a href="../it/">Italiano</a>  |
+<a href="../nl/">Nederlands</a>  |
+<a href="../pl/">Polski</a>  |
+<a href="../pt/">Português</a>  |
+<a href="../pt_BR/">Português do Brasil</a>  |
+<a href="../sq/">Shqip</a>  |
+<a href="../sk/">Slovenčina</a>  |
+<a href="../tr/">Türkçe</a>  |
+<a href="../ru/">Pусский</a>  |
+<a href="../uk/">Українська</a>  |
+<a href="../zh_CN/">简体中文</a>
