use better fitting separator

--- a/_includes/footer-languages.html
+++ b/_includes/footer-languages.html
@@ -1,19 +1,19 @@
-<a href="../id/">Bahasa Indonesia</a>  |
-<a href="../ca/">Català</a>  |
-<a href="../cs/">Čeština</a>  |
-<a href="../de/">Deutsch</a>  |
-<a href="../en/">English</a>  |
-<a href="../es/">Español</a>  |
-<a href="../fr/">Français</a>  |
-<a href="../gl/">Galego</a>  |
-<a href="../it/">Italiano</a>  |
-<a href="../nl/">Nederlands</a>  |
-<a href="../pl/">Polski</a>  |
-<a href="../pt/">Português</a>  |
-<a href="../pt_BR/">Português do Brasil</a>  |
-<a href="../sq/">Shqip</a>  |
-<a href="../sk/">Slovenčina</a>  |
-<a href="../tr/">Türkçe</a>  |
-<a href="../ru/">Pусский</a>  |
-<a href="../uk/">Українська</a>  |
-<a href="../zh_CN/">简体中文</a>
+  <a href="../id/">Bahasa Indonesia</a>
+· <a href="../ca/">Català</a>
+· <a href="../cs/">Čeština</a>
+· <a href="../de/">Deutsch</a>
+· <a href="../en/">English</a>
+· <a href="../es/">Español</a>
+· <a href="../fr/">Français</a>
+· <a href="../gl/">Galego</a>
+· <a href="../it/">Italiano</a>
+· <a href="../nl/">Nederlands</a>
+· <a href="../pl/">Polski</a>
+· <a href="../pt/">Português</a>
+· <a href="../pt_BR/">Português do Brasil</a>
+· <a href="../sq/">Shqip</a>
+· <a href="../sk/">Slovenčina</a>
+· <a href="../tr/">Türkçe</a>
+· <a href="../ru/">Pусский</a>
+· <a href="../uk/">Українська</a>
+· <a href="../zh_CN/">简体中文</a>
