--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,12 +79,12 @@
     | <a href="donate">{%if tx.donate != ""%}{{ tx.donate }}{%else%}{{ txEn.donate }}{%endif%}</a>
     | <a href="imprint">{%if tx.imprint != ""%}{{ tx.imprint }}{%else%}{{ txEn.imprint }}{%endif%}</a>
     | <a href="gdpr-website">{%if tx.privacy != ""%}{{ tx.privacy }}{%else%}{{ txEn.privacy }}{%endif%}</a>
-<br>
-<br>
+</p>
+<p id="languages">
 {%if tx.language != ""%}{{ tx.language }}{%else%}{{ txEn.language }}{%endif%}:
 {% include footer-languages.html %}
-<br>
-<br>
+</p>
+<p>
 {% include subscribe-to-feed-links.html %}
 <br>
 © 2023 Delta Chat contributors
