full language names (#696)
* use native language names instead of, partly weird and unknown, ISO codes

* always show 'language' title, there are more uninteresting things in the footer that are always shown

* use better fitting separator

* limit max. width of language list on desktop

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,10 +79,12 @@
     | <a href="donate">{%if tx.donate != ""%}{{ tx.donate }}{%else%}{{ txEn.donate }}{%endif%}</a>
     | <a href="imprint">{%if tx.imprint != ""%}{{ tx.imprint }}{%else%}{{ txEn.imprint }}{%endif%}</a>
     | <a href="gdpr-website">{%if tx.privacy != ""%}{{ tx.privacy }}{%else%}{{ txEn.privacy }}{%endif%}</a>
-<br>
-<span class="desktoponly">{%if tx.language != ""%}{{ tx.language }}{%else%}{{ txEn.language }}{%endif%}:</span>
+</p>
+<p id="languages">
+{%if tx.language != ""%}{{ tx.language }}{%else%}{{ txEn.language }}{%endif%}:
 {% include footer-languages.html %}
-<br>
+</p>
+<p>
 {% include subscribe-to-feed-links.html %}
 <br>
 © 2023 Delta Chat contributors
