Set default background color
Dark theme environment support
#719

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -165,6 +165,7 @@ body {
     font-size: 16px;
     line-height: 1.5em;
     color: #000;
+    background-color: #fff;
 }
 
 #menu, h1, h2, h3, h4, h5, h6 {
