css: set "display: block" for badge images
Otherwise they are treated as inline elements
and <picture> container height depends on the line height:
https://stackoverflow.com/questions/6664460/line-height-affects-images

--- a/_sass/_downloadpage.scss
+++ b/_sass/_downloadpage.scss
@@ -50,8 +50,9 @@ div.download-content {
         display: flex;
         align-content: center;
         margin: 3px;
-        &>img{
+        img{
             height: 48px;
+            display: block;
         }
     }
 
