--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -123,6 +123,7 @@
                 Flatpak manual install: <code>flatpak install flathub chat.delta.desktop</code><br />
                 Arch manual install: <code>yay -S deltachat-desktop-git</code><br />
                 Nix manual install: <code>nix-env -f "&lt;nixpkgs&gt;" -iA deltachat-desktop</code>
+                Snap manual install (community maintained): <code>sudo snap install deltachat-desktop</code>
             </div>
         </div>
         <div class="box" id="ubuntutouch">
