--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -86,7 +86,7 @@
 <p>
 {% include subscribe-to-feed-links.html %}
 <br>
-© 2024 Delta Chat contributors
+© 2024 Delta Chat contributors <!-- when bumping year, see also .well-known/security.txt -->
 </p>
 </div>
 
