--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -4,12 +4,11 @@
 {% assign VERSION_ANDROID = "1.42.6" %}
 
 <div class="download-content">
-    <h1>{%if tx.download.install != ""%}{{ tx.download.install }}{%else%}{{ txEn.download.install }}{%endif%}:</h1>
+    <h1>❶ {%if tx.download.install != ""%}{{ tx.download.install }}{%else%}{{ txEn.download.install }}{%endif%}</h1>
     <div id="recommendation-section" hidden>
-        <p><b>{%if tx.download.recommendation != ""%}{{ tx.download.recommendation }}{%else%}{{ txEn.download.recommendation }}{%endif%}:</b></p>
         <div id="recommend"></div>
     </div>
-    <h2 id="noscript-headline">{%if tx.menu.download != ""%}{{ tx.menu.download }}{%else%}{{ txEn.menu.download }}{%endif%}</h2>
+    <h2 id="noscript-headline">❶ {%if tx.menu.download != ""%}{{ tx.menu.download }}{%else%}{{ txEn.menu.download }}{%endif%}</h2>
     <details id="boxes">
         <summary><b>{%if tx.download.other != ""%}{{ tx.download.other }}{%else%}{{ txEn.download.other }}{%endif%}</b></summary>
         <div class="box" id="android">
@@ -144,14 +143,14 @@
             </div>
         </div>
     </details>
-    <h2>{%if tx.download.get_account != ""%}{{ tx.download.get_account }}{%else%}{{ txEn.download.get_account }}{%endif%}:</h2>
+    <h2>❷ {%if tx.download.get_account != ""%}{{ tx.download.get_account }}{%else%}{{ txEn.download.get_account }}{%endif%}</h2>
     <p>{%if tx.download.get_account_explanation != ""%}{{ tx.download.get_account_explanation }}{%else%}{{ txEn.download.get_account_explanation }}{%endif%}:</p>
     <p>
         <a href="dcaccount:https://nine.testrun.org/cgi-bin/newemail.py">
             <img width="300" style="float:none;" src="../assets/blog/nine-invite-qrcode.png">
         </a>
     </p>
-    <h2>{%if tx.download.add_friends != ""%}{{ tx.download.add_friends }}{%else%}{{ txEn.download.add_friends }}{%endif%}:</h2>
+    <h2>❸ {%if tx.download.add_friends != ""%}{{ tx.download.add_friends }}{%else%}{{ txEn.download.add_friends }}{%endif%}</h2>
     <p>{%if tx.download.add_friends_explanation != ""%}{{ tx.download.add_friends_explanation }}{%else%}{{ txEn.download.add_friends_explanation }}{%endif%}</p>
 </div>
 <script src="../assets/js/download-page2.js"></script>
