fix cursor on expand link

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -9,7 +9,7 @@
         <div id="recommend"></div>
     </div>
     <details id="boxes" open>
-        <summary id="boxes-summary" hidden><b>{%if tx.download.other != ""%}{{ tx.download.other }}{%else%}{{ txEn.download.other }}{%endif%}</b></summary>
+        <summary id="boxes-summary" hidden>{%if tx.download.other != ""%}{{ tx.download.other }}{%else%}{{ txEn.download.other }}{%endif%}</summary>
         <div class="box" id="android">
             <div class="title">Android</div>
             <div class="buttons">
