--- a/_sass/_downloadpage.scss
+++ b/_sass/_downloadpage.scss
@@ -70,3 +70,8 @@ div.download-content {
         background: transparent;
     }
 }
+
+#boxes-summary {
+    font-weight: bold;
+    cursor: pointer;
+}
