--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -48,6 +48,13 @@
                       <img src="../assets/badges/amazon-appstore.png" alt="Available at Amazon Appstore" width=163 height=48 />
                     </picture>
                 </a>
+                <a href="https://url.cloud.huawei.com/pXnbdjuOhW?shareTo=qrcode" class="img-badge">
+                    <picture>
+                        <source srcset="../assets/badges/appgallery.webp" type="image/webp">
+                        <source srcset="../assets/badges/appgallery.png" type="image/png">
+                        <img src="../assets/badges/appgallery.png" alt="Explore it on AppGallery" width=159 height=48 />
+                    </picture>
+                </a>
                 <a href="https://download.delta.chat/android/deltachat-gplay-release-{{VERSION_ANDROID}}.apk"><small>Download</small> APK</a>
             </div>
             <div class="descr">
