--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -225,7 +225,7 @@ blockquote { font-style: italic; }
 h1,h2,h3,h4,h5,h6 {
     &:hover {
         .anchor::before {
-            content: "🔗"
+            content: "\1F517"
         }
     }
 }
