--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -196,6 +196,12 @@ code, pre, blockquote { background-color: #eee; overflow-x: scroll;}
 pre, blockquote { padding: 2px 1em; }
 blockquote { font-style: italic; }
 
+code {
+    padding-left: 5px;
+    padding-right: 5px;
+    border-radius: 5px;
+}
+
 
 #content table td, #content table th { border: 1px solid #ccc; padding: 0.2em 0.4em; }
 #content table th { background-color: #eee; font-weight: bold; }
