--- a/_sass/_downloadpage.scss
+++ b/_sass/_downloadpage.scss
@@ -75,3 +75,9 @@ div.download-content {
     font-weight: bold;
     cursor: pointer;
 }
+
+summary.noupgrades {
+    color: #1e6bb8;
+    text-decoration: none;
+    cursor: pointer;
+}
