download: make summaries look more consistent

--- a/_sass/_downloadpage.scss
+++ b/_sass/_downloadpage.scss
@@ -77,8 +77,7 @@ div.download-content {
 }
 
 summary.noupgrades {
-    color: #1e6bb8;
-    text-decoration: none;
+    font-weight: bold;
     cursor: pointer;
 }
 
