test if ascii works

--- a/_sass/_downloadpage.scss
+++ b/_sass/_downloadpage.scss
@@ -82,8 +82,8 @@ summary.noupgrades {
 }
 
 summary {
-  list-style-type: '➡ ';
+  list-style-type: '> ';
 }
 details[open] > summary {
-  list-style-type: '⬆ ';
+  list-style-type: '^ ';
 }
