unify layout: make 'Source code' always the last link

--- a/_includes/download-boxes.html
+++ b/_includes/download-boxes.html
@@ -176,8 +176,8 @@
                 </a>
             </div>
             <div class="descr">
-                <a href="https://codeberg.org/lk108/deltatouch">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a><br />
-                See <a href="https://delta.chat/en/2023-07-02-deltatouch">blog</a> for details about this community driven effort
+                See <a href="https://delta.chat/en/2023-07-02-deltatouch">blog</a> for details about this community driven effort<br />
+                <a href="https://codeberg.org/lk108/deltatouch">{%if tx.download.source_code != ""%}{{ tx.download.source_code }}{%else%}{{ txEn.download.source_code }}{%endif%}</a>
             </div>
         </div>
     </details>
