use larger font one homepage, driven completely through css, so easy adaptable

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -84,6 +84,12 @@ body {
 	width: 100%;
 }
 
+/* larger font on homepage, may be removed or adapted whenever homepage changes */
+#homepage-heading ~ p {
+  font-size: 1.2em;
+  margin-top: 1.6em !important;
+  margin-bottom: 1.6em !important;
+}
 
 /* rough layout: desktop second 
 *******************************************************************************/
